# Dysartria-Speech-Classification

./: README.md  main.py  pyproject.toml
notebook/: Dysartric_speech.ipynb
