[project]
name = "dysartria-speech-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "soundfile>=0.14.0",
]
